@@ -234,6 +234,8 @@ class ClientCache(object):
                         "already have current data for oid")
                 else:
                     return
+            if not self.fc.add(o):
+                return # too large
             self.current[oid] = start_tid
             self._trace(0x52, oid, start_tid, dlen=len(data))
         else:
@@ -241,9 +243,10 @@ class ClientCache(object):
             p = start_tid, end_tid
             if p in L:
                 return # duplicate store
+            if not self.fc.add(o):
+                return # too large
             bisect.insort_left(L, p)
             self._trace(0x54, oid, start_tid, end_tid, dlen=len(data))
-        self.fc.add(o)
 
     ##
     # Remove all knowledge of noncurrent revisions of oid, both in
@@ -883,7 +886,8 @@ class FileCache(object):
     ##
     # Add Object object to the cache.  This may evict existing objects, to
     # make room (and almost certainly will, in steady state once the cache
-    # is first full).  The object must not already be in the cache.
+    # is first full).  The object must not already be in the cache.  If the
+    # object is too large for the cache, False is returned, otherwise True.
     def add(self, object):
         size = OBJECT_HEADER_SIZE + object.size
         # A number of cache simulation experiments all concluded that the
@@ -891,7 +895,7 @@ class FileCache(object):
         # objects simply weren't cached.  For now, we ignore the request
         # only if the entire cache file is too small to hold the object.
         if size > self.maxsize - ZEC4_HEADER_SIZE:
-            return
+            return False
 
         assert object.key not in self.key2entry
         assert len(object.key[0]) == 8
@@ -902,6 +906,7 @@ class FileCache(object):
 
         available = self._makeroom(size)
         self._writeobj(object, available)
+        return True
 
     ##
     # Return Object for key, or None if not in cache.
